--- a/src/style.css
+++ b/src/style.css
@@ -140,3 +140,9 @@ h1 {
   box-shadow: 0 0 0.5rem 0.5rem rgba(0, 0, 0, 0.05);
   background-color: #fff;
 }
+
+.checked {
+  font-style: italic;
+  text-decoration: line-through;
+  color: var(--color-grey-2);
+}
